--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
 
     "description": "Download videos from various websites using this telegram bot",
 
-    "repository": "https://github.com/devansh-op/txt-v2",
+    "repository": "https://github.com/Radhagitrepo/Radha-Uploder-01",
     "buildpacks":[
         {
             "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
